Compiles, but GC buggy
The code now compiles.  However, there is a lingering bug in
the garbage collector which causes it to fail to resize the heap
correctly.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "RustyScheme"
+name = "rusty_scheme"
 version = "0.1.0"
 authors = ["Demi Marie Obenour <demiobenour@gmail.com>"]
 
