Symbol GC finally works at last!
Moved symbols into boxed values on the Rust heap, with special GC
handling.  Took two days to realize that I needed to use Box<Symbol>
instead of Symbol as the value in the HashMap (the HashMap may move its
contents around in memory).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,11 @@ keywords = ["scheme", "interpreter", "scripting"]
 
 [dependencies]
 libc = "*"
+log = "*"
+env_logger = "*"
 
 [features]
 default = ["memcpy-gc"]
 memcpy-gc = []
 debug-logging = []
+clippy = []
